Dataset package created

--- a/pipeline/flappy-bird-dataset/pyproject.toml
+++ b/pipeline/flappy-bird-dataset/pyproject.toml
@@ -1,13 +1,11 @@
 [tool.poetry]
-name = "lucas-kanade-model"
+name = "flappy-bird-dataset"
 version = "0.1.0"
 description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.6"
-opencv-python = "^4.4.0.44"
-flappy-bird-dataset = { path = "../flappy-bird-dataset/" }
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 
