--- a/pipeline/gunner-farneback-reward-model/pyproject.toml
+++ b/pipeline/gunner-farneback-reward-model/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "reward-model"
+name = "gunner-farneback-reward-model"
 version = "0.1.0"
 description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
