--- a/pipeline/flappy-bird-dataset/pyproject.toml
+++ b/pipeline/flappy-bird-dataset/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+opencv-python = "^4.4.0.44"
 
 [tool.poetry.dev-dependencies]
 
