Update and rename pipeline/lucas-kanade-model/pyproject.toml to pipeline/reward-model/pyproject.toml

--- a/pipeline/reward-model/pyproject.toml
+++ b/pipeline/reward-model/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lucas-kanade-model"
+name = "reward-model"
 version = "0.1.0"
 description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
