--- a/pipeline/flappy-bird-dataset/pyproject.toml
+++ b/pipeline/flappy-bird-dataset/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 opencv-python = "^4.4.0.44"
+scikit-learn = "^0.21.2"
 
 [tool.poetry.dev-dependencies]
 
