--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -9,6 +9,7 @@ python = "3.6.8"
 tensorflow = "1.15.3"
 opencv-python = "^4.4.0.44"
 gunner-farneback-reward-model = { path = "gunner-farneback-reward-model/" }
+flappy-bird-dataset = { path = "flappy-bird-dataset/" }
 
 [tool.poetry.dev-dependencies]
 
