--- a/pipeline/flappy-bird-dataset/pyproject.toml
+++ b/pipeline/flappy-bird-dataset/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6.8"
+python = "3.6.8"
 opencv-python = "^4.4.0.44"
 scikit-learn = "^0.21.2"
 
