--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -11,6 +11,7 @@ opencv-python = "^4.4.0.44"
 gunner-farneback-reward-model = { path = "gunner-farneback-reward-model/" }
 flappy-bird-dataset = { path = "flappy-bird-dataset/" }
 tqdm = "^4.50.0"
+scikit-image = "^0.17.2"
 
 [tool.poetry.dev-dependencies]
 
